[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accounts-cluster-bench"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-account-decoder = { path = "../account-decoder", version = "*" }
solana-clap-utils = { path = "../clap-utils", version = "*" }
solana-client = { path = "../client", version = "*" }
solana-faucet = { path = "../faucet", version = "*" }
solana-gossip = { path = "../gossip", version = "*" }
solana-logger = { path = "../logger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-net-utils = { path = "../net-utils", version = "*" }
solana-rpc-client = { path = "../rpc-client", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-transaction-status = { path = "../transaction-status", version = "*" }
solana-version = { path = "../version", version = "*" }
spl-token = { version = "*", features = ["no-entrypoint"] }

[dev-dependencies]
solana-core = { path = "../core", version = "*" }
solana-local-cluster = { path = "../local-cluster", version = "*" }
solana-test-validator = { path = "../test-validator", version = "*" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
