[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-banking-bench"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-client = { path = "../client", version = "*" }
solana-core = { path = "../core", version = "*" }
solana-gossip = { path = "../gossip", version = "*" }
solana-ledger = { path = "../ledger", version = "*" }
solana-logger = { path = "../logger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-poh = { path = "../poh", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*", default-features = false }
solana-version = { path = "../version", version = "*" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
