[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.17.1"
pretty-hex = "0.3.0"
semver = "1.0.14"
serde = "1.0.144"
serde_json = "1.0.83"
solana-account-decoder = { path = "../account-decoder", version = "*" }
solana-clap-utils = { path = "../clap-utils", version = "*" }
solana-cli-config = { path = "../cli-config", version = "*" }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-transaction-status = { path = "../transaction-status", version = "*" }
solana-vote-program = { path = "../programs/vote", version = "*" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "*"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
