[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-cli"
description = "Blockchain, Rebuilt for Scale"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.26"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.3", features = ["termination"] }
humantime = "2.0.1"
log = "0.4.17"
num-traits = "0.2"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.12", default-features = false, features = [
	"blocking",
	"brotli",
	"deflate",
	"gzip",
	"rustls-tls",
	"json"
] }
semver = "1.0.14"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
solana-account-decoder = { path = "../account-decoder", version = "*" }
solana-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "*" }
solana-bpf-loader-program = { path = "../programs/bpf_loader", version = "*" }
solana-clap-utils = { path = "../clap-utils", version = "*" }
solana-cli-config = { path = "../cli-config", version = "*" }
solana-cli-output = { path = "../cli-output", version = "*" }
solana-client = { path = "../client", version = "*" }
solana-config-program = { path = "../programs/config", version = "*" }
solana-faucet = { path = "../faucet", version = "*" }
solana-logger = { path = "../logger", version = "*" }
solana-program-runtime = { path = "../program-runtime", version = "*" }
solana-pubsub-client = { path = "../pubsub-client", version = "*" }
solana-remote-wallet = { path = "../remote-wallet", version = "*" }
solana-rpc-client = { path = "../rpc-client", version = "*" }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-rpc-client-nonce-utils = { path = "../rpc-client-nonce-utils", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*" }
solana-transaction-status = { path = "../transaction-status", version = "*" }
solana-version = { path = "../version", version = "*" }
solana-vote-program = { path = "../programs/vote", version = "*" }
solana_rbpf = "=0.2.38"
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"

[dev-dependencies]
solana-streamer = { path = "../streamer", version = "*" }
solana-test-validator = { path = "../test-validator", version = "*" }
tempfile = "3.3.0"

[[bin]]
name = "solana"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
