[package]
name = "solana-client-test"
version = "1.15.1"
description = "Solana RPC Test"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-client-test"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.25"
serde_json = "1.0.83"
solana-ledger = { path = "../ledger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-merkle-tree = { path = "../merkle-tree", version = "*" }
solana-metrics = { path = "../metrics", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-pubsub-client = { path = "../pubsub-client", version = "*" }
solana-rayon-threadlimit = { path = "../rayon-threadlimit", version = "*" }
solana-rpc = { path = "../rpc", version = "*" }
solana-rpc-client = { path = "../rpc-client", version = "*", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-test-validator = { path = "../test-validator", version = "*" }
solana-transaction-status = { path = "../transaction-status", version = "*" }
solana-version = { path = "../version", version = "*" }
systemstat = "0.2.0"
tokio = { version = "*", features = ["full"] }
tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
solana-logger = { path = "../logger", version = "*" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
