[package]
name = "solana-core"
description = "Blockchain, Rebuilt for Scale"
version = "1.15.1"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-core"
readme = "../README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[badges]
codecov = { repository = "solana-labs/solana", branch = "master", service = "github" }

[dependencies]
ahash = "0.8.11"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
eager = "0.1.0"
etcd-client = { version = "0.8.1", features = ["tls"] }
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.7.7"
min-max-heap = "1.3.0"
num_enum = "0.5.7"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
serde = "1.0.144"
serde_derive = "1.0.103"
solana-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "*" }
solana-bloom = { path = "../bloom", version = "*" }
solana-client = { path = "../client", version = "*" }
solana-entry = { path = "../entry", version = "*" }
solana-frozen-abi = { path = "../frozen-abi", version = "*" }
solana-frozen-abi-macro = { path = "../frozen-abi/macro", version = "*" }
solana-geyser-plugin-manager = { path = "../geyser-plugin-manager", version = "*" }
solana-gossip = { path = "../gossip", version = "*" }
solana-ledger = { path = "../ledger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-metrics = { path = "../metrics", version = "*" }
solana-net-utils = { path = "../net-utils", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-poh = { path = "../poh", version = "*" }
solana-program-runtime = { path = "../program-runtime", version = "*" }
solana-rayon-threadlimit = { path = "../rayon-threadlimit", version = "*" }
solana-rpc = { path = "../rpc", version = "*" }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-send-transaction-service = { path = "../send-transaction-service", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*", default-features = false }
solana-transaction-status = { path = "../transaction-status", version = "*" }
solana-version = { path = "../version", version = "*" }
solana-vote-program = { path = "../programs/vote", version = "*" }
sys-info = "0.9.1"
tempfile = "3.3.0"
thiserror = "1.0"
tokio = { version = "*", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
matches = "0.1.9"
raptorq = "1.7.0"
serde_json = "1.0.83"
serial_test = "0.9.0"
solana-logger = { path = "../logger", version = "*" }
solana-program-runtime = { path = "../program-runtime", version = "*" }
solana-stake-program = { path = "../programs/stake", version = "*" }
static_assertions = "1.1.0"
systemstat = "0.2.0"
test-case = "2.2.2"

[target."cfg(unix)".dependencies]
sysctl = "0.4.4"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[[bench]]
name = "unprocessed_packet_batches"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
