[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-dos"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = "0.5.6"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.7.0"
serde = "1.0.144"
solana-bench-tps = { path = "../bench-tps", version = "*" }
solana-client = { path = "../client", version = "*" }
solana-core = { path = "../core", version = "*" }
solana-faucet = { path = "../faucet", version = "*" }
solana-gossip = { path = "../gossip", version = "*" }
solana-logger = { path = "../logger", version = "*" }
solana-measure = { path = "../measure", version = "*"  }
solana-net-utils = { path = "../net-utils", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-rpc = { path = "../rpc", version = "*" }
solana-rpc-client = { path = "../rpc-client", version = "*", default-features = false }
solana-sdk = { path = "../sdk", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*", default-features = false }
solana-version = { path = "../version", version = "*" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
serial_test = "0.9.0"
solana-local-cluster = { path = "../local-cluster", version = "*" }
solana-thin-client = { path = "../thin-client", version = "*" }
