[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-poh-bench"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-poh-bench"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-entry = { path = "../entry", version = "*" }
solana-logger = { path = "../logger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-version = { path = "../version", version = "*" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
