[package]
name = "solana-poh"
version = "1.15.1"
description = "Solana PoH"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-poh"
edition = "2021"

[dependencies]
core_affinity = "0.5.10"
crossbeam-channel = "0.5"
log = "0.4.17"
solana-entry = { path = "../entry", version = "*" }
solana-ledger = { path = "../ledger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-metrics = { path = "../metrics", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-sys-tuner = { path = "../sys-tuner", version = "*" }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.3"
matches = "0.1.9"
rand = "0.7.0"
solana-logger = { path = "../logger", version = "*" }
solana-perf = { path = "../perf", version = "*" }

[lib]
crate-type = ["lib"]
name = "solana_poh"

[[bench]]
name = "poh"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
