[package]
name = "solana-rpc-test"
version = "1.15.1"
description = "Solana RPC Test"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-rpc-test"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
crossbeam-channel = "0.5"
futures-util = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
serde = "1.0.144"
serde_json = "1.0.83"
solana-account-decoder = { path = "../account-decoder", version = "*" }
solana-client = { path = "../client", version = "*" }
solana-pubsub-client = { path = "../pubsub-client", version = "*" }
solana-rpc = { path = "../rpc", version = "*" }
solana-rpc-client = { path = "../rpc-client", version = "*", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-test-validator = { path = "../test-validator", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*", default-features = false }
solana-transaction-status = { path = "../transaction-status", version = "*" }
tokio = { version = "*", features = ["full"] }

[dev-dependencies]
solana-logger = { path = "../logger", version = "*" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
