[package]
name = "solana-rpc"
version = "1.15.1"
description = "Solana RPC"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-rpc"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
crossbeam-channel = "0.5"
dashmap = "4.0.2"
itertools = "0.10.5"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
libc = "0.2.131"
log = "0.4.17"
rayon = "1.5.3"
regex = "1.6.0"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
soketto = "0.7"
solana-account-decoder = { path = "../account-decoder", version = "*" }
solana-client = { path = "../client", version = "*" }
solana-entry = { path = "../entry", version = "*" }
solana-faucet = { path = "../faucet", version = "*" }
solana-gossip = { path = "../gossip", version = "*" }
solana-ledger = { path = "../ledger", version = "*" }
solana-measure = { path = "../measure", version = "*" }
solana-metrics = { path = "../metrics", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-poh = { path = "../poh", version = "*" }
solana-rayon-threadlimit = { path = "../rayon-threadlimit", version = "*" }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-send-transaction-service = { path = "../send-transaction-service", version = "*" }
solana-stake-program = { path = "../programs/stake", version = "*" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*", default-features = false }
solana-transaction-status = { path = "../transaction-status", version = "*" }
solana-version = { path = "../version", version = "*" }
solana-vote-program = { path = "../programs/vote", version = "*" }
spl-token = { version = "*", features = ["no-entrypoint"] }
spl-token-2022 = { version = "*", features = ["no-entrypoint"] }
stream-cancel = "0.8.1"
thiserror = "1.0"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec", "compat"] }

[dev-dependencies]
serial_test = "0.9.0"
solana-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "*" }
solana-net-utils = { path = "../net-utils", version = "*" }
solana-stake-program = { path = "../programs/stake", version = "*" }
symlink = "0.1.0"

[lib]
crate-type = ["lib"]
name = "solana_rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
