[package]
name = "solana-udp-client"
version = "1.15.1"
description = "Solana UDP Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-udp-client"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
solana-net-utils = { path = "../net-utils", version = "=1.15.1" }
solana-sdk = { path = "../sdk", version = "=1.15.1" }
solana-streamer = { path = "../streamer", version = "=1.15.1" }
solana-tpu-client = { path = "../tpu-client", version = "=1.15.1" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
