[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-validator"
description = "Blockchain, Rebuilt for Scale"
version = "1.15.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"
default-run = "solana-validator"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = "2.33.1"
console = "0.15.0"
core_affinity = "0.5.10"
crossbeam-channel = "0.5"
fd-lock = "3.0.6"
indicatif = "0.17.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
lazy_static = "1.4.0"
log = "0.4.17"
num_cpus = "1.13.1"
rand = "0.7.0"
rayon = "1.5.3"
serde = "1.0.144"
serde_json = "1.0.83"
serde_yaml = "0.9.13"
solana-clap-utils = { path = "../clap-utils", version = "*" }
solana-cli-config = { path = "../cli-config", version = "*" }
solana-core = { path = "../core", version = "*" }
solana-download-utils = { path = "../download-utils", version = "*" }
solana-entry = { path = "../entry", version = "*" }
solana-faucet = { path = "../faucet", version = "*" }
solana-genesis-utils = { path = "../genesis-utils", version = "*" }
solana-gossip = { path = "../gossip", version = "*" }
solana-ledger = { path = "../ledger", version = "*" }
solana-logger = { path = "../logger", version = "*" }
solana-metrics = { path = "../metrics", version = "*" }
solana-net-utils = { path = "../net-utils", version = "*" }
solana-perf = { path = "../perf", version = "*" }
solana-poh = { path = "../poh", version = "*" }
solana-rpc = { path = "../rpc", version = "*" }
solana-rpc-client = { path = "../rpc-client", version = "*", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "*" }
solana-runtime = { path = "../runtime", version = "*" }
solana-sdk = { path = "../sdk", version = "*" }
solana-send-transaction-service = { path = "../send-transaction-service", version = "*" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "*" }
solana-streamer = { path = "../streamer", version = "*" }
solana-test-validator = { path = "../test-validator", version = "*" }
solana-tpu-client = { path = "../tpu-client", version = "*", default-features = false }
solana-version = { path = "../version", version = "*" }
solana-vote-program = { path = "../programs/vote", version = "*" }
symlink = "0.1.0"

[dev-dependencies]
solana-account-decoder = { path = "../account-decoder", version = "*" }
spl-token-2022 = { version = "*", features = ["no-entrypoint"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }

[target."cfg(unix)".dependencies]
libc = "0.2.131"
signal-hook = "0.3.14"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
