[package]
name = "solana-sbf-programs"
description = "Blockchain, Rebuilt for Scale"
version = "1.15.1"
documentation = "https://docs.rs/solana"
homepage = "https://solana.com/"
readme = "README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
sbf_c = []
sbf_rust = []

[build-dependencies]
walkdir = "2"

[dependencies]
bincode = "1.1.4"
byteorder = "1.3.2"
elf = "0.0.10"
itertools = "0.10.1"
log = "0.4.11"
miow = "0.3.6"
net2 = "0.2.37"
solana-account-decoder = { path = "../../account-decoder", version = "*" }
solana-bpf-loader-program = { path = "../bpf_loader", version = "*" }
solana-cli-output = { path = "../../cli-output", version = "*" }
solana-logger = { path = "../../logger", version = "*" }
solana-measure = { path = "../../measure", version = "*" }
solana-program-runtime = { path = "../../program-runtime", version = "*" }
solana-runtime = { path = "../../runtime", version = "*" }
solana-sbf-rust-invoke = { path = "rust/invoke", version = "*" }
solana-sbf-rust-realloc = { path = "rust/realloc", version = "*" }
solana-sbf-rust-realloc-invoke = { path = "rust/realloc_invoke", version = "*" }
solana-sdk = { path = "../../sdk", version = "*" }
solana-transaction-status = { path = "../../transaction-status", version = "*" }
solana_rbpf = "=0.2.38"

[dev-dependencies]
solana-ledger = { path = "../../ledger", version = "*" }

[[bench]]
name = "bpf_loader"

[workspace]
members = [
    "rust/128bit",
    "rust/128bit_dep",
    "rust/alloc",
    "rust/alt_bn128",
    "rust/call_depth",
    "rust/caller_access",
    "rust/curve25519",
    "rust/custom_heap",
    "rust/dep_crate",
    "rust/deprecated_loader",
    "rust/dup_accounts",
    "rust/error_handling",
    "rust/external_spend",
    "rust/finalize",
    "rust/get_minimum_delegation",
    "rust/inner_instruction_alignment_check",
    "rust/instruction_introspection",
    "rust/invoke",
    "rust/invoke_and_error",
    "rust/invoke_and_ok",
    "rust/invoke_and_return",
    "rust/invoked",
    "rust/iter",
    "rust/log_data",
    "rust/many_args",
    "rust/many_args_dep",
    "rust/mem",
    "rust/membuiltins",
    "rust/noop",
    "rust/panic",
    "rust/param_passing",
    "rust/param_passing_dep",
    "rust/rand",
    "rust/realloc",
    "rust/realloc_invoke",
    "rust/ro_account_modify",
    "rust/ro_modify",
    "rust/sanity",
    "rust/secp256k1_recover",
    "rust/sha",
    "rust/sibling_inner_instruction",
    "rust/sibling_instruction",
    "rust/simulation",
    "rust/spoof1",
    "rust/spoof1_system",
    "rust/sysvar",
    "rust/upgradeable",
    "rust/upgraded",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
